# wani

./: .gitignore  Cargo.toml  README.md  \  blah.json
.github/workflows/: deploy.yml
src/: main.rs  wanidata.rs  wanisql.rs
