[package]
name = "wani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.23", features = ["json", "blocking"] }
serde = { version = "^1.0.195", features = ["serde_derive"] }
serde_json = "1"
