[package]
name = "wani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.23", features = ["json", "blocking"] }
serde = { version = "^1.0.195", features = ["serde_derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0", features = [] }
home = "0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs"] }
tokio-rusqlite = "0.5.0"
console = "0.15.8"
rand = "0.8.5"
itertools = "0.12.1"
rodio = { version = "0", features = ["symphonia-all", "default"] }
wana_kana = "3"
image2ascii = "0"
resvg = { version = "0.38.0" }
usvg= { version = "0" }
rgb = "0.8.37"
glob = "0.3.1"
