[package]
name = "wani"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.23", features = ["json", "blocking"] }
serde = { version = "^1.0.195", features = ["serde_derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0", features = [] }
home = "0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-rusqlite = "0.5.0"
console = "0.15.8"
rand = "0.8.5"
